small fixes. having trouble with responsiveness

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
     <main>
       <section class="summary">
-        <div class="textbox">
+        <article class="textbox">
           <p>
             <span class="line-dot"> </span>
             I'm a frontend developer about to finish my studies at Technigo. Previous chef and brewmaster. 
@@ -39,23 +39,23 @@
             During Sept 2019 to March 2020 I'm attending Technigos remote bootcamp with 
             the main goal to work with web development full time after graduate.
           </p>
-        </div>
+        </article>
       </section>
 
       <section class="tech">
         <h3>Tech</h3>
-        <div class="textbox">
+        <article class="textbox">
           <p>
             HTML, CSS, Flexbox, JavaScript, ES6, JSX, React, React Hooks, React Native, Redux,
             Node.js, Mongo DB, Web Accessibly, API:s, mob-programming,
             pair-programming, github
           </p>
-        </div>
+        </article>
       </section>
 
       <section class="projects">
         <h3>Feautured projects</h3>
-        <div class="flex-cards">
+        <article class="flex-cards">
           <a
             class="project-cards"
             href="https://fervent-wright-cf5cac.netlify.com/"
@@ -178,7 +178,7 @@
               </div>
             </a>
           </div>
-        </div>
+        </article>
       </section>
 
       <section class="my-thoughts">
@@ -295,7 +295,7 @@
           
         </div>
       </section>
-      <section class="tech">
+      <section class="more">
         <h3>More</h3>
         <div class="more-links">
           <a href="https://www.linkedin.com/in/jens-nilsen-5736b015b/""><button class="more-btn" id="more-btn-in"></button></a>
