--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="tag">HTML5</div>
             <div class="tag">JavaScript</div>
             <div class="tag">CSS3</div>
-            <div class="tag">API</div>
+            <div class="tag">Reedux</div>
           </div>
         </a>
           
@@ -122,7 +122,7 @@
               <div class="tag">JavaScript</div>
               <div class="tag">CSS3</div>
               <div class="tag">React</div>
-              <div class="tag">API</div>
+              <div class="tag">Reedux</div>
             </div>
           </a>
           <a
