--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <article class="flex-cards">
           <a
           class="project-cards"
-          href="https://pensive-edison-5b46a0.netlify.com/"
+          href="https://silly-carson-97d2ea.netlify.com/"
         >
           <div
             class="card-backgound"
@@ -104,7 +104,7 @@
           
           <a
             class="project-cards"
-            href="https://musing-shaw-122b25.netlify.com"
+            href="https://condescending-pike-aa614f.netlify.com/"
           >
             <div
               class="card-backgound"
