--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="tag">HTML5</div>
             <div class="tag">JavaScript</div>
             <div class="tag">CSS3</div>
-            <div class="tag">Reedux</div>
+            <div class="tag">Redux</div>
           </div>
         </a>
           
@@ -104,7 +104,7 @@
           
           <a
             class="project-cards"
-            href="https://condescending-pike-aa614f.netlify.com/"
+            href="https://to-to.netlify.com/"
           >
             <div
               class="card-backgound"
@@ -122,7 +122,7 @@
               <div class="tag">JavaScript</div>
               <div class="tag">CSS3</div>
               <div class="tag">React</div>
-              <div class="tag">Reedux</div>
+              <div class="tag">Redux</div>
             </div>
           </a>
           <a
